# megazord

./: Cargo.toml  README.md
bar/: Cargo.toml
bar/src/: lib.rs
foo/: Cargo.toml
foo/src/: lib.rs
src/: lib.rs
