[package]
name = "megazord"
version = "0.1.0"
authors = ["Nick Alexander <nalexander@mozilla.com>"]

[features]
export_fns = ["foo/export_fns", "bar/export_fns"]

[lib]
name = "megazord"
crate-type = ["cdylib"]

[dependencies]
foo = { path = "foo" }
bar = { path = "bar" }

[profile.release]
opt-level = "z"
debug = true
lto = true
